fixed unmounting elements being placed behind background color and appearing to not be animated

--- a/demo/style.css
+++ b/demo/style.css
@@ -11,8 +11,10 @@ html {
 }
 
 #App {
-  max-width: 650px;
+  max-width: 700px;
   margin: 50px auto;
+  background-color: whitesmoke;
+  padding: 30px;
 }
 
 button {
